--- a/aws/package.json
+++ b/aws/package.json
@@ -13,15 +13,19 @@
   "devDependencies": {
     "@types/jest": "^29.5.12",
     "@types/node": "20.14.9",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.1.5",
     "aws-cdk": "2.150.0",
+    "jest": "^29.7.0",
+    "prettier": "^3.3.3",
+    "ts-jest": "^29.1.5",
     "ts-node": "^10.9.2",
     "typescript": "~5.5.3"
   },
   "dependencies": {
-    "aws-cdk-lib": "2.150.0",
+    "@aws-cdk/aws-ec2": "^1.203.0",
+    "@aws-cdk/aws-lambda": "^1.203.0",
+    "aws-cdk-lib": "^2.150.0",
     "constructs": "^10.0.0",
+    "dotenv": "^16.4.5",
     "source-map-support": "^0.5.21"
   }
 }
