--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
 NODE_ENV=development
+FRONTEND_ORIGIN=<your-frontend-origin>
+LOCALDEV_ORIGIN=<your-frontend-development-origin>
 DB_NAME=<your-db-name>
 DB_HOST=<your-db-host>
 DB_PORT=<your-db-port>
