--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "docker:build": "docker build -t cart-api:latest .",
+    "docker:run": "docker run --rm -p 4000:4000 --env-file .env cart-api:latest",
+    "docker:lint": "docker run --rm -i hadolint/hadolint < Dockerfile"
   },
   "dependencies": {
     "@codegenie/serverless-express": "^4.14.1",
