fix: update 'name' field in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rs-checkout-api",
+  "name": "aws-shop-backend-cart-api",
   "version": "0.0.1",
   "description": "",
   "author": "",
