feat: impl elastic beanstalk additional scripts
- eb-create.sh
- eb-deploy.sh
- eb-setenv.sh

--- a/.dockerignore
+++ b/.dockerignore
@@ -3,6 +3,7 @@ aws/              # No need for build
 sql/              # No need for build
 README.*          # No need for build
 .elasticbeanstalk # No need for build
+.eb               # No need for build
 .gitignore        # No need for build
 .git/             # No need for build. Can contain sensitive data
 .dockerignore     # No need to include docker files in the image
