--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build:webpack": "nest build --webpack --webpackPath webpack.config.js",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch --entryFile main.dev",
+    "start:dev": "NODE_ENV=development nest start --watch --entryFile main.dev",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
