refactor: set beanstalk url in .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 NODE_ENV=development
-BEANSTALK_URL=<your-beanstalk-url>
+BEANSTALK_URL=http://lazy-goose-cart-api-develop.eu-north-1.elasticbeanstalk.com
 FRONTEND_ORIGIN=<your-frontend-origin>
 LOCALDEV_ORIGIN=<your-frontend-development-origin>
 DB_NAME=<your-db-name>
